# linux-canary-tripwire

./: .gitignore  ARCHITECTURE.md  PROTOTYPE_TEST_REPORT.txt  QA_REPORT.md  README.md  VERIFICATION_SUMMARY.md  integration_test.py  pyproject.toml  quickstart.sh  test_canary.py
canary/: __init__.py  cli.py  config.py  logger.py  notifier.py  utils.py  watcher.py
tests/: __init__.py  test_cli.py  test_config.py  test_logger.py  test_utils.py  test_watcher.py
